<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".ProfileDetailActivity">

    <!--  Header  -->

    <ImageButton
        android:id="@+id/profile_detail_return_button"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTransparent"
        android:contentDescription="@string/profile_return_button"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/profile_detail_favorite_button"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/colorTransparent"
        app:srcCompat="@android:drawable/btn_star"
        android:contentDescription="@string/profile_return_button" />

    <ImageButton
        android:id="@+id/profile_detail_transit_button"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_toStartOf="@+id/profile_detail_favorite_button"
        android:layout_toLeftOf="@+id/profile_detail_favorite_button"
        android:background="@color/colorTransparent"
        android:contentDescription="@string/transit_button"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

    <ImageButton
        android:id="@+id/profile_detail_gift_button"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_toStartOf="@+id/profile_detail_transit_button"
        android:layout_toLeftOf="@+id/profile_detail_transit_button"
        android:background="@color/colorTransparent"
        android:contentDescription="@string/gift_button"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <!-- Profile picture   -->

    <ImageView
        android:id="@+id/profile_detail_profile_picture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/profile_detail_profile_nickname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/profile_detail_profile_picture"
        app:srcCompat="@drawable/add_user_img" />

    <TextView
        android:id="@+id/profile_detail_profile_nickname"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/profile_detail_footer"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center" />

    <!--  Footer  -->

    <LinearLayout
        android:id="@+id/profile_detail_footer"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:background="@drawable/custom_upper_border">

        <!-- FREE CHAT -->
        <LinearLayout
            android:id="@+id/profile_detail_chatting_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profile_detail_chatting_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_detail_chatting_image"
                app:srcCompat="@android:drawable/sym_action_chat" />

            <TextView
                android:id="@+id/profile_Detail_chatting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/free_chat"/>

        </LinearLayout>

        <!-- CALL -->
        <LinearLayout
            android:id="@+id/profile_detail_call_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="80dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profile_detail_call_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_detail_call_image"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <TextView
                android:id="@+id/profile_detail_call_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/call"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>